--- a/.github/workflows/pull_code.yml
+++ b/.github/workflows/pull_code.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - development  # Trigger on both 'main' and 'development' branches
+      - master  # Trigger on both 'main' and 'development' branches
 
 jobs:
   deploy:
@@ -35,8 +35,8 @@ jobs:
           echo "Deploying to development server (development branch)"
           ssh -o StrictHostKeyChecking=no ubuntu@3.110.48.193 "
             cd /var/www/html/angular-social-network &&
-            git checkout development &&
-            git pull origin development"
+            git checkout master &&
+            git pull origin master"
         else
           echo "No matching branch for deployment"
         fi
